--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ add_library(common STATIC
         src/common.cpp include/common/common.h
         src/ip.cpp include/common/ip.h
         src/dates.cpp include/common/dates.h
+        src/sql_utils.cpp include/common/sql_utils.h
 )
 target_include_directories(common
         PRIVATE
