--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -36,3 +36,16 @@ target_link_libraries(test_sql_utils PRIVATE Catch2::Catch2WithMain)
 target_link_libraries(test_sql_utils PRIVATE
         common
 )
+
+add_executable(test_dates test_dates.cpp)
+target_include_directories(test_dates
+        PRIVATE
+        ${COMMON_INCLUDE}
+        ${NLOHMANN_JSON_INCLUDE}
+        ${SIMPLE_COLOR_INCLUDE}
+)
+
+target_link_libraries(test_dates PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(test_dates PRIVATE
+        common
+)
