--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ install(DIRECTORY include/ DESTINATION include)
 option(NO_COMMON_TESTS "common Disable Current tests" OFF)
 
 if (NOT NO_COMMON_TESTS)
-
+    include(FetchContent)
     FetchContent_Declare(Catch2
             GIT_REPOSITORY https://github.com/catchorg/Catch2.git
             GIT_TAG v3.4.0
